--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             <div class="col-sm-6 col-md-5 col-sm-offset-6 col-md-offset-7">
               <div class="section__description">
                 <div class="section__heading wow fadeIn" data-wow-duration="1s">
-                  <h1>Лучшие Традиции</h1>
+                  <h1>Все для вишивання та рукоділля</h1>
                 </div>
                 <p class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                  Мы объединили виденье вкусов и предпочтений современного общества и людей которые ходили в питейные заведения в начале ХХ века!</p>
+                 Завжди раді кожному з Вас!</p>
                 
               </div>
             </div>
@@ -173,7 +173,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Сорочки жіночі</h5>
 						<p class="card-text">Від 100грн</p>
-						<a href="products-g.html" class="btn btn-outline-secondary">Переглянути</a>
+						<a href="products-m.html" class="btn btn-outline-primary" >Переглянути</a>
 					</div>
 				</div>
 				<div class="card col-12 col-md-6 col-lg-4 wew bounceInLeft">
@@ -181,7 +181,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Інструменти дяя вишивки</h5>
 						<p class="card-text">від 5грн</p>
-						<a href="shop.html" class="btn btn-primary" data-toggle="modal" data-target="#purple-orchid">Переглянути</a>
+						<a href="products-m.html" class="btn btn-outline-primary" >Переглянути</a>
 					</div>
 				</div>
 				</div>
