--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Сорочки жіночі</h5>
 						<p class="card-text">Від 100грн</p>
-						<a href="products-m.html" class="btn btn-outline-primary" >Переглянути</a>
+						<a href="products-g.html" class="btn btn-outline-primary" >Переглянути</a>
 					</div>
 				</div>
 				<div class="card col-12 col-md-6 col-lg-4 wew bounceInLeft">
@@ -181,7 +181,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Інструменти дяя вишивки</h5>
 						<p class="card-text">від 5грн</p>
-						<a href="products-m.html" class="btn btn-outline-primary" >Переглянути</a>
+						<a href="shop.html" class="btn btn-outline-primary" >Переглянути</a>
 					</div>
 				</div>
 				</div>
