--- a/products-g.html
+++ b/products-g.html
@@ -13,12 +13,12 @@
   <meta name="msvalidate.01" content="EE9F03A55076F23644C155525BF6A780" />
   <title>Заготовочка</title>
 
-  <meta property=og:title content="Bar-Pirog" />
-  <meta property=og:description content="Bar-Pirogъ, ресторан, пирожковая, в Киеве" />
-  <link rel="canonical" href="https://bar-chief707.c9users.io/index.html" />
+  <meta property=og:title content="Заготовочка" />
+  <meta property=og:description content="Заготовочка вищиванки" />
+  <link rel="canonical" href="https://chief7071.github.io/svit" />
   <meta property="og:locale" content="uk" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Блискучий Світ" />
+  <meta property="og:site_name" content="Заготовочка" />
   
 
 
@@ -33,7 +33,7 @@
 <body>
     <header class="container" id="home">
  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a> <img src="img/shop-logo.png" alt=logo></a>
+    <a> <img src="img/logo3.png" alt=logo></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
