--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta name="msvalidate.01" content="EE9F03A55076F23644C155525BF6A780" />
   <title>Заготовочка</title>
 
-  <meta property=og:title content="Bar-Pirog" />
-  <meta property=og:description content="Bar-Pirogъ, ресторан, пирожковая, в Киеве" />
-  <link rel="canonical" href="https://bar-chief707.c9users.io/index.html" />
+  <meta property=og:title content="Заготовочка" />
+  <meta property=og:description content="Заготвочка" />
+  <link rel="canonical" href="https://chief7071.github.io/svit/" />
   <meta property="og:locale" content="uk" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Блискучий Світ" />
+  <meta property="og:site_name" content="Заготовчка" />
   
 
 
@@ -142,7 +142,7 @@
             <div class="col-sm-6 col-md-5 col-sm-offset-6 col-md-offset-7">
               <div class="section__description">
                 <div class="section__heading wow fadeIn" data-wow-duration="1s">
-                  <h1>Все для вишивання та рукоділля</h1>
+                  <h1>Заготовочка</h1>
                 </div>
                 <p class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                  Завжди раді кожному з Вас!</p>
@@ -193,7 +193,7 @@
 
         <div class="col-sm-6 col-md-3 col-md-push-6">
           <div class="footer-block footer-address">
-            <h4>Контакты</h4>
+            <h4>Контакти</h4>
             <ul class="list-unstyled">
               <li>
                 <a>
@@ -215,7 +215,7 @@
         <div class="col-sm-12 col-md-6 col-md-pull-3">
           <div class="footer-block opening-hours">
 
-            <h4>Часы роботы</h4>
+            <h4>Розклад роботи</h4>
             <div class="row table-row">
               <div class="col-sm-6">
                 <ul class="list-unstyled">
@@ -365,22 +365,6 @@
           <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
           <div style='overflow:hidden;height:525px;width:795px;'>
             <div id='gmap_canvas' style='height:525px;width:795px;'></div>
-            <div><small><a href="https://embedgooglemaps.com/de/">https://embedgooglemaps.com/de/</a></small>
-              <div>
-                <div>
-                  <script>
-                    function init_map() {
-                      var myOptions = { zoom: 11, center: new google.maps.LatLng(49.839683, 24.029717000000005), mapTypeId: google.maps.MapTypeId.ROADMAP };
-                      map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
-                      marker = new google.maps.Marker({ map: map, position: new google.maps.LatLng(49.839683, 24.029717000000005) });
-                      infowindow = new google.maps.InfoWindow({ content: '<strong>Incedible-shop</strong><br>Lviv<br>' });
-                      google.maps.event.addListener(marker, 'click', function() { infowindow.open(map, marker); });
-                      infowindow.open(map, marker);
-                    }
-                    google.maps.event.addDomListener(window, 'load', init_map);
-                  </script>
-                </div>
-              </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
