--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-sm-6 col-md-5 col-sm-offset-6 col-md-offset-7">
               <div class="section__description">
                 <div class="section__heading wow fadeIn" data-wow-duration="1s">
-                  <h1>Заготовочка</h1>
+                  <h1>Магазин Заготовочка</h1>
                 </div>
                 <p class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                  Завжди раді кожному з Вас!</p>
