--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a class="nav-link " href="#" data-toggle="modal" data-target="#about"> <b>ПРО НАС</b></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="testshop.html"><b>ТОВАРИ</b></a>
+        <a class="nav-link " href="shop.html"><b>ТОВАРИ</b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gallery.html"><b>ГАЛЕРЕЯ</b></a>
