--- a/products-m.html
+++ b/products-m.html
@@ -15,7 +15,7 @@
 
   <meta property=og:title content="Bar-Pirog" />
   <meta property=og:description content="Bar-Pirogъ, ресторан, пирожковая, в Киеве" />
-  <link rel="canonical" href="https://bar-chief707.c9users.io/index.html" />
+  <link rel="canonical" href="https://chief7071.github.io/svit" />
   <meta property="og:locale" content="uk" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Блискучий Світ" />
@@ -45,7 +45,7 @@
         <a class="nav-link " href="#" data-toggle="modal" data-target="#about"> <b>ПРО НАС</b></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link " href="testshop.html"><b>ТОВАРИ</b><span class="sr-only ">(current)</span></a>
+        <a class="nav-link " href="shop.html"><b>ТОВАРИ</b><span class="sr-only ">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gallery.html"><b>ГАЛЕРЕЯ</b></a>
@@ -311,7 +311,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
-          <button class="btn btn-primary buy" data-id="id">Buy</button>
+          <button class="btn btn-primary buy" data-id="id">Купити</button>
         </div>
       </div>
     </div>
@@ -322,17 +322,18 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modal-about">We are a unique shop focused only on orchids. The store was founded by Artem Fominov in Lviv in 2018</h5>
+          <h5 class="modal-title" id="modal-about">Ми це унікальний магазин з усім необхідним для вишивання і рукоділля
+</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
         </div>
         <div class="modal-body">
-          <h1>Блискучий Світ</h1>
+          <h1>Звготовочка</h1>
           <img class="w-100" src="img/shop.jpg" alt="about">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
         </div>
       </div>
     </div>
@@ -343,8 +344,8 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modal-contacts">Our Phones:<br> +380739273743<br> +380979273743<br> +380989273744<br> Our Email:<br> kxmb382@gmail.com<br> chief7777@gmail.com<br> flower-professional@ukr.net</h5>
-          <h5> Adress: c. Lviv<br> str. Promuslova 50/52 </h5>
+          <h5 class="modal-title" id="modal-contacts">Наш телефон:<br> +380934401341<br> Пошта:<br> kxmb382@gmail.com</h5>
+          <h5> Адреса: м.Львів<br> вул. Миколайчука </h5>
 
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
