--- a/products-m.html
+++ b/products-m.html
@@ -235,7 +235,7 @@
                     <span class="day">Субота</span><span class="time">10:00 - 3:00</span>
                   </li>
                   <li>
-                    <span class="day">Недідя/span><span class="time">10:00 - 3:00</span>
+                    <span class="day">Недідя</span><span class="time">10:00 - 3:00</span>
                   </li>
                  
                 </ul>
@@ -364,8 +364,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    
   
 
  <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=" anonymous "></script>
