--- a/products-g.html
+++ b/products-g.html
@@ -13,12 +13,12 @@
   <meta name="msvalidate.01" content="EE9F03A55076F23644C155525BF6A780" />
   <title>Заготовочка</title>
 
-  <meta property=og:title content="Заготовочка" />
-  <meta property=og:description content="Заготовочка вищиванки" />
+  <meta property=og:title content="Bar-Pirog" />
+  <meta property=og:description content="Bar-Pirogъ, ресторан, пирожковая, в Киеве" />
   <link rel="canonical" href="https://chief7071.github.io/svit" />
   <meta property="og:locale" content="uk" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Заготовочка" />
+  <meta property="og:site_name" content="Блискучий Світ" />
   
 
 
@@ -45,7 +45,7 @@
         <a class="nav-link " href="#" data-toggle="modal" data-target="#about"> <b>ПРО НАС</b></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link " href="testshop.html"><b>ТОВАРИ</b><span class="sr-only ">(current)</span></a>
+        <a class="nav-link " href="shop.html"><b>ТОВАРИ</b><span class="sr-only ">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gallery.html"><b>ГАЛЕРЕЯ</b></a>
@@ -194,13 +194,12 @@
               </li>
 
               <li>
-                <a href="tel:0956130239">
-                      +38 095 613 02 39                   </a>
+                <a href="tel:0974401341">
+                      +38 097 440 13 41                   </a>
               </li>
  <li>
-                <a href="tel:0980041101">
-                      +380 98 004 11 01
-                </a>
+                <a href="tel:0974401341">
+                      +38 097 440 13 41                   </a>
               </li>
             </ul>
           </div>
@@ -208,7 +207,7 @@
         <div class="col-sm-12 col-md-6 col-md-pull-3">
           <div class="footer-block opening-hours">
 
-            <h4>Часы роботы</h4>
+            <h4>Часи роботи</h4>
             <div class="row table-row">
               <div class="col-sm-6">
                 <ul class="list-unstyled">
@@ -235,7 +234,7 @@
                     <span class="day">Субота</span><span class="time">10:00 - 3:00</span>
                   </li>
                   <li>
-                    <span class="day">Недідя/span><span class="time">10:00 - 3:00</span>
+                    <span class="day">Недідя</span><span class="time">10:00 - 3:00</span>
                   </li>
                  
                 </ul>
@@ -311,7 +310,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
-          <button class="btn btn-primary buy" data-id="id">Buy</button>
+          <button class="btn btn-primary buy" data-id="id">Купити</button>
         </div>
       </div>
     </div>
@@ -322,17 +321,18 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modal-about">We are a unique shop focused only on orchids. The store was founded by Artem Fominov in Lviv in 2018</h5>
+          <h5 class="modal-title" id="modal-about">Ми це унікальний магазин з усім необхідним для вишивання і рукоділля
+</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
         </div>
         <div class="modal-body">
-          <h1>Блискучий Світ</h1>
+          <h1>Звготовочка</h1>
           <img class="w-100" src="img/shop.jpg" alt="about">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрити</button>
         </div>
       </div>
     </div>
@@ -343,8 +343,8 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modal-contacts">Our Phones:<br> +380739273743<br> +380979273743<br> +380989273744<br> Our Email:<br> kxmb382@gmail.com<br> chief7777@gmail.com<br> flower-professional@ukr.net</h5>
-          <h5> Adress: c. Lviv<br> str. Promuslova 50/52 </h5>
+          <h5 class="modal-title" id="modal-contacts">Наш телефон:<br> +380934401341<br> Пошта:<br> kxmb382@gmail.com</h5>
+          <h5> Адреса: м.Львів<br> вул. Миколайчука </h5>
 
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
@@ -352,28 +352,10 @@
         </div>
 
         <div class="modal-body">
-          <h1>Incredible Orchids Shop Adress</h1>
+          <h1>Наш магазин у Львові</h1>
         </div>
         <div>
-          <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
-          <div style='overflow:hidden;height:525px;width:795px;'>
-            <div id='gmap_canvas' style='height:525px;width:795px;'></div>
-            <div><small><a href="https://embedgooglemaps.com/de/">https://embedgooglemaps.com/de/</a></small>
-              <div>
-                <div>
-                  <script>
-                    function init_map() {
-                      var myOptions = { zoom: 11, center: new google.maps.LatLng(49.839683, 24.029717000000005), mapTypeId: google.maps.MapTypeId.ROADMAP };
-                      map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
-                      marker = new google.maps.Marker({ map: map, position: new google.maps.LatLng(49.839683, 24.029717000000005) });
-                      infowindow = new google.maps.InfoWindow({ content: '<strong>Incedible-shop</strong><br>Lviv<br>' });
-                      google.maps.event.addListener(marker, 'click', function() { infowindow.open(map, marker); });
-                      infowindow.open(map, marker);
-                    }
-                    google.maps.event.addDomListener(window, 'load', init_map);
-                  </script>
-                </div>
-              </div>
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d475.8238625437153!2d24.044253545056797!3d49.86642747102181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473adcfc5cd8a4db%3A0xa16f60df5593dcd3!2z0LLRg9C70LjRhtGPINCR0LXRgNC10YHRgtGP0L3QsCwg0JvRjNCy0ZbQsiwg0JvRjNCy0ZbQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCA3OTAwMA!5e1!3m2!1suk!2sua!4v1548885947122" width="800" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
@@ -381,8 +363,7 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    
   
 
  <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin=" anonymous "></script>
@@ -395,6 +376,7 @@
   <script src='js/imgloader.js'></script>
   <script src='js/site.js'></script>
   <script src='js/global.js'></script>
+
   <script async src="js/alert-window.js "></script>
   <script defer src="js/cart.js "></script>
   <script defer src="js/product-list.js "></script>
